crates/reinhardt-pages/tests/ui/form/fail/unknown_native_attr_rejected.rs
use reinhardt_pages::form;

fn main() {
	let _form = form! {
		name: UnknownNativeAttrForm,
		action: "/invalid",
		fields: {
			avatar: FileField {
				captrue: "environment",
			}
		}
	};
}
